gitops/apps/ocis/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ocis
spec:
  parentRefs:
    - name: public
      namespace: projectcontour
      sectionName: https
  hostnames:
    - ocis.didactiklabs.io
  rules:
    - backendRefs:
        - name: web
          port: 9100
