gitops/apps/ocis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocis
  annotations:
    cert-manager.io/cluster-issuer: root-didactiklabs
spec:
  rules:
    - host: 'ocis.didactik.labs'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 9100
  tls:
    - hosts:
        - 'ocis.didactik.labs'
      secretName: ocis-tls
